--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,178 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+:root{
+  --primary-color: white;
+  --secondary-color: #1a1b1f;
+  --text-color: #1a1b1f;
+  --light-secondary: #32343a;
+  --lighter-secondary: #e2e2e2;
+  --main-2: #BEBFC7;
+  --bg-secondary: #f4f4f4;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
+*{
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+
+}
+body{
+  color: var(--text-color);
+  font-size: 16px;
+  font-weight: 400;
+  scroll-behavior: smooth;
+}
+h1,h2,h3,h4,h5,h6{
+  font-weight: normal;
+  color: var(--text-color);
+  margin: 10px 0px;
+}
+h1{
+  font-size: 2.8rem;
+  margin: 20px 0px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+h2{
+  font-size: 2.3rem;
+}
+h3{
+  font-size: 1.9rem;
+}
+h4{
+  font-size: 1.5rem;
+}
+h5{
+  font-weight: 500;
+  font-size: 1.1rem;
+}
+h6{
+  font-weight: 500;
+  font-size: 0.9rem;
+
+}
+.display-big{
+  font-size: 4rem;
+  margin: 10px 0px;
+}
+.display-medium{
+  font-size: 2.8rem;
+  margin: 10px 0px;
+}
+.display-small{
+  font-size: 1.5rem;
+  margin: 10px 0px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+hr{
+  height: 1px;
+  background-color: #eee;
+  border: none;
+  outline: none;
+  padding: 0px;
+  margin: 5px 0px;
+}
+.label{
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 0.8rem;
+}
+a{
+  color: var(--text-color) ;
+}
+.p-bigger{
+  font-size: 1.2rem;
+}
+.p-light{
+  opacity: 0.6;
+}
+.p-small{
+  font-size: 0.9rem;
+}
+.p-tiny{
+  font-size: 0.75rem;
+}
+p{
+  line-height: 1.5rem;
+  font-size: 0.95rem;
+  font-weight: 400;
+}
+button{
+  outline: none;
+  border: none;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  letter-spacing: 2px;
+  font-size: 0.9rem;
+  padding: 12px 25px;
+  transition: background-color .4s, opacity .4s, color .4s;
+  cursor: pointer;
+}
+button.btn-bigger{
+  padding: 16px 35px;
+  font-size: inherit;
+}
+button:hover{
+  background-color: var(--light-secondary);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+blockquote{
+  border-left: 5px solid var(--lighter-secondary);
+  padding: 15px 30px;
+  margin: 25px 0px;
+  font-size: 1.2rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.rich-text p{
+  opacity: 0.6;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
+
+figcaption{
+  display: block;
+  caption-side: bottom;
+  text-align: center;
+  font-size: 0.8rem;
+  opacity: 0.6;
+}
+
+ul{
+  margin: 20px 0px;
+  padding-left: 40px;
+  list-style-type: disc;
+}
+
+ul li{
+  margin-bottom: 10px;
+}
+
+.app-container{
+ min-height: calc(100vh - 180px);   
+}
+
+
+label{
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  padding: 10px 0px;
+}
+input,textarea{
+  border:  1px solid var(--lighter-secondary);
+  outline: none;
+  padding: 15px 15px;
+  transition: all 100ms ease;
+}
+input::placeholder,textarea::placeholder{
+  color: var(--main-2);
+
+}
+input:focus,input:active,textarea:active,textarea:focus{
+  border:  1px solid var(--secondary-color);
+}
+
+.input-group{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0px;
 }
