--- a/src/app/projects/(components)/projectcad.css
+++ b/src/app/projects/(components)/projectcad.css
@@ -9,7 +9,7 @@
 }
 .project-card a{
     text-decoration: none;
-    margin: 40px 0px 20px 0px;
+    margin: 20px 0px 20px 0px;
 }
 .project-card-container{
     display: flex;
@@ -18,4 +18,18 @@
     justify-content: flex-start;
     align-items: center;
     align-content: center;
+
+}
+.project-card-container * {
+    transition: all 1s ease-in-out;
+}
+.project-card-parent{
+    width: 100%;
+    position: relative;
+    height: 200vh;
+}
+.project-card-sticky{
+    position: sticky;
+    top: 150px;
+    overflow: hidden;
 }
