--- a/src/app/(sharedComponents)/TechStackIcons/style.css
+++ b/src/app/(sharedComponents)/TechStackIcons/style.css
@@ -1,26 +1,19 @@
 .icon-container {
   overflow: hidden;
-      width: 100%;
-      position: relative;
-      height: 100px;
-
-  }
+  width: 100%;
+  position: relative;
+  margin-top: -50px;
+  margin-bottom: 0px;
+}
   
   .icon-list {
-    height: 50px;
-    display: flex;
+    height: 180px;
     width: 100%;
-    /* flex-wrap: wrap; */
-    align-items: center;
-    max-width: 100vw;
-    overflow: hidden;
-    overflow-x: hidden !important;
-    justify-content: flex-end;
   }
   
   .icon {
     width: 50px;
     height: 50px;
     margin: 5px;
-    position: absolute;
+    /* position: absolute; */
   }
