--- a/src/app/experience/(components)/Timeline/style.css
+++ b/src/app/experience/(components)/Timeline/style.css
@@ -9,4 +9,11 @@ max-width: 600px;
 .timeline h3{
     margin: 0px;
     padding: 0px;
+    width: auto;
+}
+.experience-review-container .subtitle{
+    margin: -5px 0px;
+    opacity: 0.6;
+    font-style: italic;
+    font-weight: bold;
 }
