--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -179,3 +179,23 @@ input:focus,input:active,textarea:active,textarea:focus{
   flex-direction: column;
   margin: 10px 0px;
 }
+
+
+
+.loader{
+  width: 100vw;
+  height: 100%;
+  position: fixed;
+  z-index: 100000000;
+  top: 0;
+  left: 0;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader svg{
+  width:30%;
+  height: 30%;
+}
