added required data correctly

--- a/src/app/(sharedComponents)/Contact/style.css
+++ b/src/app/(sharedComponents)/Contact/style.css
@@ -6,6 +6,16 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 40px;
 }
+@media only screen and (max-width: 600px) {
+    .contact-form .form-header{
+        display: grid;
+        grid-template-columns: 1fr;
+        column-gap: 0px;
+    }
+    #contact{
+        max-width: 200px;
+    }
+}
 .contact-form button{
     margin: 20px 0px;
 }
