--- a/src/app/(sharedComponents)/AboutMe/about.css
+++ b/src/app/(sharedComponents)/AboutMe/about.css
@@ -6,3 +6,9 @@ article.about-me{
     width: 100%;
     margin: 80px 0px;
 }
+
+@media only screen and (max-width: 600px) {
+    .display-big{
+        font-size: 2.5rem;
+    }
+}
