--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ body{
   font-weight: 400;
   scroll-behavior: smooth;
   background-color: white;
+  overflow-x: hidden;
 }
 html, body { 
   scroll-behavior: smooth
