--- a/src/app/page.css
+++ b/src/app/page.css
@@ -18,3 +18,14 @@
 .latest-proj{
     margin: 120px 0px;
 }
+@media only screen and (max-width: 600px) {
+    .contact{
+        padding: 10px;
+    }
+    input{
+        max-width: 95%;
+    }
+    .box-container{
+        padding: 10px;
+    }
+}
