configured scroll bar , added chatbot and svg images

--- a/src/app/(sharedComponents)/TechStackIcons/style.css
+++ b/src/app/(sharedComponents)/TechStackIcons/style.css
@@ -9,13 +9,14 @@
   }
   
   .icon {
-    width: 80px;
+    width: 120px;
     height: 80px;
     /* position: absolute; */
   }
 .icon img{
   object-fit: contain;
   width: 100%;
+  height: 100%;
   transition: all 200ms ease;
 }
 .icon:hover img{
