made mobile responsive , some tweaking

--- a/src/app/(sharedComponents)/AboutMe/about.css
+++ b/src/app/(sharedComponents)/AboutMe/about.css
@@ -11,4 +11,7 @@ article.about-me{
     .display-big{
         font-size: 2.5rem;
     }
+    article.about-me{
+        margin: 20px 0px;   
+    }
 }
