--- a/src/app/projects/(components)/projectcad.css
+++ b/src/app/projects/(components)/projectcad.css
@@ -8,6 +8,11 @@
     cursor: pointer;
     height: 600px;
 }
+.project-card img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
 
 .project-card:hover img{
     animation: move 10s ease infinite alternate;
@@ -45,8 +50,31 @@
     overflow: hidden;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1200px) {
+    .project-card{
+        max-width: 100%;
+        height: 400px;
 
+    }
+    .project-card-sticky{
+        position: static;
+        width: 100vw;
+        max-width: 100vw;
+
+    }
+    .project-card-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+    }
+
+    .project-card .image-container{
+        max-height: 250px;
+    }
+    .project-card-parent{
+        height:fit-content ;
+    }
 }
 
 
