--- a/src/app/projects/[projectId]/style.css
+++ b/src/app/projects/[projectId]/style.css
@@ -47,3 +47,22 @@
     max-width: 1200px;
     margin-top: 20px;
 }
+.date-list-skills{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+@media only screen and (max-width: 600px) {
+    .project-instance .img-container{
+        height: 350px;
+    }
+    .project-instance-details {
+        margin: 20px auto;
+    }
+    .label-container{
+        flex-wrap: wrap;
+    }
+    .date-list-skills{
+        flex-direction: column;
+    }
+}
