feat: added certifications fixed some bugs

--- a/src/app/(sharedComponents)/TechStackIcons/style.css
+++ b/src/app/(sharedComponents)/TechStackIcons/style.css
@@ -2,7 +2,9 @@
   overflow: hidden;
   width: 100%;
 }
-  
+  .icon-list-rtl{
+    direction: 'initial';
+  }
   .icon-list {
     height: 180px;
     width: 100%;
