--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,25 +211,24 @@ a,button:active{
 
 
 
-
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
-    scrollbar-width: auto;
-    scrollbar-color: #98969A #ffffff;
+    scrollbar-width: thin;
+    scrollbar-color: #212121 #f2f2f2;
   }
 
   /* Chrome, Edge, and Safari */
   *::-webkit-scrollbar {
-    width: 16px;
+    width: 15px;
   }
 
   *::-webkit-scrollbar-track {
-    background: #ffffff;
+    background: #f2f2f2;
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color:#1e1e1e;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
+    background-color: #212121;
+    border-radius: 34px;
+    border: 3px solid #666666;
   }
