--- a/src/app/projects/style.css
+++ b/src/app/projects/style.css
@@ -1,148 +1,185 @@
-.projects-list-container{
-    margin: 100px auto;
-    margin-bottom: 0px;
-    max-width: 1400px;
+.projects-list-container {
+  margin: 100px auto;
+  margin-bottom: 0px;
+  max-width: 1400px;
 }
-.projects-list-container > h1{
-    text-align: center;
-    margin: 80px auto;
-
+.projects-list-container > h1 {
+  text-align: center;
+  margin: 80px auto;
 }
-.projects-list-container .projects-list-row{
-    display: grid;
-    grid-template-columns: 1.5fr  1fr ;
+.projects-list-container .projects-list-row {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
 }
-.projects-list-container .projects-list-row:nth-child(odd){
-    grid-template-columns: 1fr  1.5fr;
+.projects-list-container .projects-list-row:nth-child(odd) {
+  grid-template-columns: 1fr 1.5fr;
 }
-.projects-list-container  hr{
-    margin: 0px 20px;
-    padding: 0px;
-    height: 3px;
+.projects-list-container hr {
+  margin: 0px 20px;
+  padding: 0px;
+  height: 3px;
 }
 .projects-list-container .projects-list-row .hr90 {
-    height: 100%;
-    width: 4px;
+  height: 100%;
+  width: 4px;
 }
-.projects-list-container .projects-list-row .small{
-    display: flex;
-    flex-direction: row;
+.projects-list-container .projects-list-row .small {
+  display: flex;
+  flex-direction: row;
 }
 
-.projects-list-container .projects-list-row .project-instance{
-    padding: 10px;
-    position: relative;
-    height: 450px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.projects-list-container .projects-list-row .project-instance {
+  padding: 10px;
+  position: relative;
+  height: 450px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .projects-list-container .projects-list-row .project-instance * {
-    z-index: 1;
+  z-index: 1;
 }
-.projects-list-container .projects-list-row .project-instance h1{
-    max-width: 550px;
+.projects-list-container .projects-list-row .project-instance h1 {
+  max-width: 550px;
 }
-.projects-list-container .projects-list-row .project-instance h1.small{
-    max-width: 450px;
+.projects-list-container .projects-list-row .project-instance h1.small {
+  max-width: 450px;
 }
-.projects-list-container .projects-list-row .project-instance .img-container{
-    position: absolute;
-    top: 5%;
-    z-index: -1;
-    right: 10%;
-    border-radius: 10px;
-    opacity: 0.9;
-    overflow: hidden;
-
-    width: 500px;
-    height: 350px;
-
-}
-.projects-list-container .projects-list-row .project-instance img{
-    position: relative;
-    transition: all 10s ease-in-out;
-}
-.projects-list-container .projects-list-row .project-instance:hover img{
-    animation: move 10s ease infinite alternate;
-    filter: grayscale(0.5);
-}
-.projects-list-container .projects-list-row .project-instance .img-container.small{
-    width: 400px;
-    height: 200px;
-    position: static;
-}
-.projects-list-container .projects-list-row .project-instance a{
-    text-decoration: none;
-    margin-right: 5px;
-}
-.projects-list-container .projects-list-row .project-instance .link{
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
-    align-items: center;
-
-}
-.projects-list-container .projects-list-row .project-instance .link img{
-opacity: 0.3;
-transition: all 200ms ease;
-}
-.projects-list-container .projects-list-row .project-instance:hover .link img{
-    opacity: 1;
-    margin-left: 5px;
+.projects-list-container .projects-list-row .project-instance .img-container {
+  position: absolute;
+  top: 7%;
+  z-index: -1;
+  right: 10%;
+  overflow: hidden;
+  width: 700px;
+  height: 350px;
+  left: 0%;
+  border-radius: 10px;
+  border: 0px;
 }
 
-@media only screen and (max-width: 700px) {
-    .projects-list-container .projects-list-row{
-        display: grid;
-        grid-template-columns:  1fr ;
-    }
-    .projects-list-container .projects-list-row:nth-child(odd){
-        grid-template-columns: 1fr;
-    }
-    hr.hr90{
-        display: none;
-    }
-    .projects-list-container{
-margin: 20px auto;
-    }
+.projects-list-container
+  .projects-list-row
+  .project-instance
+  .big.img-container{
+    transform: translateY(3%);
+  }
+.projects-list-container
+  .projects-list-row
+  .project-instance
+  .big.img-container::after {
+
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.25);
+  object-fit: cover;
+
+  z-index: 10;
+}
+.projects-list-container .projects-list-row .project-instance h1.small {
+  color: var(--light-secondary);
+}
+.projects-list-container .projects-list-row .project-instance h1 {
+  color: whitesmoke;
+}
+.projects-list-container
+  .projects-list-row
+  .project-instance
+  .img-container.small {
+  width: 450px;
+  height: 300px;
+}
+.projects-list-container .projects-list-row .project-instance img {
+  position: relative;
+  transition: all 10s ease-in-out;
+  border-radius: 10px;
+}
+.projects-list-container .projects-list-row .project-instance:hover img {
+  animation: move 10s ease infinite alternate;
+  filter: hue-rotate(30deg);
+}
+.projects-list-container
+  .projects-list-row
+  .project-instance
+  .img-container.small {
+  width: 400px;
+  height: 200px;
+  position: relative;
+}
+.projects-list-container .projects-list-row .project-instance a {
+  text-decoration: none;
+  margin-right: 5px;
+}
+.projects-list-container .projects-list-row .project-instance .link {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  align-items: center;
+}
+.projects-list-container .projects-list-row .project-instance .link img {
+  opacity: 0.3;
+  transition: all 200ms ease;
+}
+.projects-list-container .projects-list-row .project-instance:hover .link img {
+  opacity: 1;
+  margin-left: 5px;
+}
+
+@media only screen and (max-width: 1100px) {
+  .projects-list-container .projects-list-row {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .projects-list-container .projects-list-row:nth-child(odd) {
+    grid-template-columns: 1fr;
+  }
+  hr.hr90 {
+    display: none;
+  }
+  .projects-list-container {
+    margin: 20px auto;
+  }
 }
 @keyframes move {
-    0% {
-      -webkit-transform-origin: bottom left;
-      -moz-transform-origin: bottom left;
-      -ms-transform-origin: bottom left;
-      -o-transform-origin: bottom left;
-      transform-origin: bottom left;
-      transform: scale(1.0);
-      -ms-transform: scale(1.0);
-      /* IE 9 */
-      
-      -webkit-transform: scale(1.0);
-      /* Safari and Chrome */
-      
-      -o-transform: scale(1.0);
-      /* Opera */
-      
-      -moz-transform: scale(1.0);
-      /* Firefox */
-    }
-    20%{
-        transform: scale(1.05);    
-    }
-    100% {
-      transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      /* IE 9 */
-      
-      -webkit-transform: scale(1.2);
-      /* Safari and Chrome */
-      
-      -o-transform: scale(1.2);
-      /* Opera */
-      
-      -moz-transform: scale(1.2);
-      /* Firefox */
-    }
+  0% {
+    -webkit-transform-origin: bottom left;
+    -moz-transform-origin: bottom left;
+    -ms-transform-origin: bottom left;
+    -o-transform-origin: bottom left;
+    transform-origin: bottom left;
+    transform: scale(1);
+    -ms-transform: scale(1);
+    /* IE 9 */
+
+    -webkit-transform: scale(1);
+    /* Safari and Chrome */
+
+    -o-transform: scale(1);
+    /* Opera */
+
+    -moz-transform: scale(1);
+    /* Firefox */
   }
+  20% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    /* IE 9 */
+
+    -webkit-transform: scale(1.2);
+    /* Safari and Chrome */
+
+    -o-transform: scale(1.2);
+    /* Opera */
+
+    -moz-transform: scale(1.2);
+    /* Firefox */
+  }
+}
